# experiment-tracking-clearml

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: config.temp.conf
scripts/: 01-generate-data.py  02-create-dataset.py  03-download-dataset.py  04-get-project-info.py  05-run-main.py  config.py  utils.py
src/: evaluate.py  main.py  main_remote_pipeline.py  prepare.py  train.py
